<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.activities.userActivity.ChangeUserActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <EditText
                    android:id="@+id/change_first_name"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="10dp"
                    android:hint="@string/change_name"
                    android:inputType="textShortMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <EditText
                    android:id="@+id/change_last_name"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="10dp"
                    android:hint="@string/change_last_name"
                    android:inputType="textShortMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <EditText
                    android:id="@+id/change_tel_number"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@drawable/ic_telephone"
                    android:drawablePadding="10dp"
                    android:hint="@string/change_telephone"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <EditText
                    android:id="@+id/change_about"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@drawable/ic_about_me"
                    android:drawablePadding="10dp"
                    android:hint="@string/change_information"
                    android:inputType="textMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/change_user"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/save_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:background="@color/background"
                android:theme="@style/RoundedCornerButton"/>
    </LinearLayout>

        <ProgressBar
                android:id="@+id/progressBar_user_change"
                android:visibility="invisible"
                android:layout_height="80dp"
                android:layout_width="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>