...
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="30dp"
                        android:textStyle="bold"
                        android:textColor="@color/darkGrey"/>
                <TextView
                        android:id="@+id/first_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_username"
                        android:drawablePadding="10dp"
                        android:drawableEnd="@drawable/ic_change_user"
                        android:layout_marginTop="10dp"
...
