<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.activities.userActivity.LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:layout_gravity="center"
                   android:layout_marginTop="40dp"
                   android:src="@mipmap/ic_launcher_round"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingTop="30dp"
                android:layout_gravity="center">

            <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColorHint="@color/colorAccent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColorHint="@color/colorAccent"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/entry"
                    android:textColor="@color/colorAccent"
                    android:background="@color/background"
                    android:theme="@style/RoundedCornerButton"/>
            <Button
                    android:id="@+id/action_go_to_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/to_registration"
                    android:textColor="@color/colorAccent"
                    android:background="@color/background"
                    android:theme="@style/RoundedCornerButton"/>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
            android:id="@+id/progressBar_login"
            android:visibility="invisible"
            android:layout_height="80dp"
            android:layout_width="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>