...
            app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/search_edit_frame"
                    android:hint="@string/search_hint"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginEnd="14dp"
                    android:textColorHint="@color/darkGrey"
                    android:inputType="textShortMessage"
                    android:lines="1"
...
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:imeOptions="actionSearch"
                    android:textCursorDrawable="@color/black"
                    android:layout_toStartOf="@+id/start_search"/>

            <ImageButton
                    android:id="@+id/start_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?android:attr/actionModeWebSearchDrawable"
...
