<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        tools:context=".ui.activities.adActivity.SearchActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/search_list_ad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="?attr/actionBarSize"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".ui.activities.adActivity.SearchActivity"/>

        <include
                layout="@layout/app_bar_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </RelativeLayout>
    <ProgressBar
            android:id="@+id/progressBar_search"
            android:visibility="invisible"
            android:layout_height="80dp"
            android:layout_width="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>