...
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/darkGrey"/>
            <TextView
                    android:id="@+id/title_ad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_ad"
                    android:drawablePadding="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
...
